--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <p>We may update this privacy policy from time to time. Any changes will be reflected in this document, and the updated version will be available within the app. We encourage users to review this policy periodically to stay informed about how we protect their privacy.</p>
 
     <h2>7. Contact Us</h2>
-    <p>If you have any questions or concerns about this privacy policy or the app, feel free to contact us at <a href="mailto:youremail@example.com">youremail@example.com</a>.</p>
+    <p>If you have any questions or concerns about this privacy policy or the app, feel free to contact us at <a href="mailto:padillavelezluis@gmail.com">padillavelezluis@gmail.com</a>.</p>
 
 </div>
 
